2008-11-29  Antti Koivisto  <antti@apple.com>

        Reviewed by Dan Bernstein.
        
        https://bugs.webkit.org/show_bug.cgi?id=22557
        Add statistics for JavaScript GC heap.

        * JavaScriptCore.exp:
        * runtime/Collector.cpp:
        (JSC::Heap::objectCount):
        (JSC::addToStatistics):
        (JSC::Heap::statistics):
        * runtime/Collector.h:

2008-11-29  Antti Koivisto  <antti@apple.com>

        Fix debug build by adding a stub method.

        * wtf/FastMalloc.cpp:
        (WTF::fastMallocStatistics):

2008-11-29  Antti Koivisto  <antti@apple.com>

        Reviewed by Alexey Proskuryakov.
        
        https://bugs.webkit.org/show_bug.cgi?id=22557
        
        Add function for getting basic statistics from FastMalloc.

        * JavaScriptCore.exp:
        * wtf/FastMalloc.cpp:
        (WTF::DLL_Length):
        (WTF::TCMalloc_PageHeap::ReturnedBytes):
        (WTF::TCMallocStats::fastMallocStatistics):
        * wtf/FastMalloc.h:

2008-11-29  Cameron Zwarich  <zwarich@apple.com>

        Not reviewed.

        The C++ standard does not automatically grant the friendships of an
        enclosing class to its nested subclasses, so we should do so explicitly.
        This fixes the GCC 4.0 build, although both GCC 4.2 and Visual C++ 2005
        accept the incorrect code as it is.

        * assembler/MacroAssembler.h:

2008-11-29  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Camron Zwarich.

        Add the class MacroAssembler to provide some abstraction of code generation,
        and change WREC to make use of this class, rather than directly accessing
        the X86Assembler.

        This patch also allows WREC to be compiled without the rest of the JIT enabled.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * assembler/MacroAssembler.h: Added.
        (JSC::MacroAssembler::):
        (JSC::MacroAssembler::MacroAssembler):
        (JSC::MacroAssembler::copyCode):